syntax = "proto3";

package proto;

option go_package = "chat-service/pkg/proto";

import "google/protobuf/timestamp.proto";


//types
message Message {
    uint32 id = 1;
    uint32 chat_id = 2;
    string sender = 3;
    string body = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Chat {
    uint32 id = 1;
    string name = 2;
    repeated Message messages = 3;
}

message ChatSummary {
    uint32 id = 1;
    string name = 2;
}

//Requests
message CreateMessageRequest {
    uint32 chat_id = 1;
    string sender = 2;
    string body = 3;
}

message CreateChatRequest {
    string sender = 1;
    string body = 2;
}

message GetRecentMessagesRequest {
    uint32 chat_id = 1;
    uint32 last_message_id = 2;
    uint32 limit = 3;
}

message GetChatSummariesUIDRequest {
    uint32 id = 1;
}

message DeleteChatByIDRequest {
    uint32 chat_id = 1;
    uint32 user_id = 2;
}

message DeleteAllChatsByUIDRequest {
    uint32 user_id = 1;
}

//Responses
message CreateMessageResponse {
    Message message = 1;
}

message CreateChatResponse {
    Chat chat = 1;
    Message message = 2;
}

message GetRecentMessagesResponse {
    repeated Message messages = 1;
}

message GetChatSummariesUIDResponse {
    repeated ChatSummary chats = 1;
}

message DeleteChatByIDResponse {
    bool success = 1;
}

message DeleteAllChatsByUIDResponse {
    bool success = 1;
}

service ChatService {
    rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse);
    rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
    rpc GetRecentMessages(GetRecentMessagesRequest) returns (GetRecentMessagesResponse);
    rpc StreamMessages(stream CreateMessageRequest) returns (stream CreateMessageResponse);
    rpc GetChatSummariesUID(GetChatSummariesUIDRequest) returns (GetChatSummariesUIDResponse);
    rpc DeleteChatByID(DeleteChatByIDRequest) returns (DeleteChatByIDResponse);
    rpc DeleteAllChatsByUID(DeleteAllChatsByUIDRequest) returns (DeleteAllChatsByUIDResponse);
}